--- a/src/app/pages/ingresosAnuales/ingresos.component.scss
+++ b/src/app/pages/ingresosAnuales/ingresos.component.scss
@@ -44,17 +44,17 @@
   height: 15px;
 }
 
-/*::ng-deep .dx-scrollbar-vertical.dx-scrollbar-hoverable {
+::ng-deep .dx-scrollbar-vertical.dx-scrollbar-hoverable {
   width: 15px;
-}*/
+}
 
 ::ng-deep .dx-scrollbar-horizontal .dx-scrollable-scroll { 
   height: 15px; 
 }
 
-/*::ng-deep .dx-scrollbar-vertical .dx-scrollable-scroll { 
+::ng-deep .dx-scrollbar-vertical .dx-scrollable-scroll { 
   width: 15px; 
-}*/
+}
 
 ::ng-deep .dx-scrollable-scroll-content { 
   background-color:gray !important; /* optional if you want to change the color */
